--- a/_posts/2018-07-30-psl-2.1.0-release.md
+++ b/_posts/2018-07-30-psl-2.1.0-release.md
@@ -29,6 +29,7 @@ while the `develop` branch stays up-to-date with our development work.
  - [CLI](#cli)
    - [CLI Configuration Properties](#cli-configuration-properties)
    - [Complete CLI Predicate Typing](#complete-cli-predicate-typing)
+   - [Literals in String Rules](#literals-in-string-rules)
 
  - [Utilities](#utilities)
    - [Getting the PSL Version](#getting-the-psl-version)
@@ -121,6 +122,12 @@ This allows PSL to choose a better underlying storage type and make operations m
 Using `UniqueStringID` will replicate the previous behavior and should work for any data.
 However, using `UniqueIntID` will almost always be faster than `UniqueStringID`.
 
+If you need to get a unique id in Java/Groovy, then you can just directly call new on it:
+```java
+UniqueIntID myIntId = new UniqueIntID(4);
+UniqueStringID myStringId = new UniqueStringID("foo");
+```
+
 ### Long Predicate Names Allowed
 In previous versions of PSL, predicate names were limited to a certain length (which was decided by the database backend).
 PSL now allows arbitrarily long predicate names.
@@ -147,6 +154,22 @@ java -jar psl.jar --infer --data example.data --model example.psl -D log4j.thres
 In the CLI, you can now specify precise typing information for each predicate.
 Previously, all predicate arguments in the CLI were typed as `UniqueStringID`.
 The [CLI data file wiki page](https://github.com/{{ site.github_username }}/psl/wiki/CLI-Data-File-Format) contains all the information.
+
+### Literals in String Rules
+Literals in string rules have been expanded to generally accept all characters.
+All literals (even numeric ones) must be quoted by single or double quotes.
+PSL will convert the literal to its underlying storage type.
+
+If a literal contains the same quote used at the start/end, then is must be escaped with a backslash.
+Backslashes must always be escaped.
+
+The following escapes are understood:
+ - `\'` - Literal Single Quote
+ - `\"` - Literal Double Quote
+ - `\\` - Literal Backslash
+ - `\t` - Tab
+ - `\n` - Newline
+ - `\r` - Carriage Return
 
 ---
 
