fix stance article

--- a/_posts/2018-07-31-stance.md
+++ b/_posts/2018-07-31-stance.md
@@ -6,7 +6,7 @@ date: 2018-07-31 10:00:00 -0700
 tags: [application]
 ---
 
-This tutorial accompanies the PSL model and corpora described in the “Joint Models of Disagreement and Stance” ACL paper (see http://www.aclweb.org/anthology/P15-1012).
+This tutorial accompanies the PSL model and corpora described in the “Joint Models of Disagreement and Stance” ACL paper.
 
 In this PSL inference task, we’ll work with text from online debate forums. An online debate forum, e.g. createdebate.org, features debates on several socio-political issues, or topics. For example, one topic might be whether or not the government should increase spending, which we’ll succinctly call “spending.” A user starts a debate by writing a post in which she indicates her stance towards the topic. For simplicity throughout, we’ll consider pro and anti as the stances. Let’s suppose she’s pro-spending. Another user replies to this user to argue his opposing point, and his post will contain language indicating his anti-spending view and textual cues that he disagrees with our original user.
 
@@ -112,9 +112,13 @@ The files for disagrees and isProAuth tell us who the users (or authors) are tha
 Navigate back to the psl-forums directory and use ./run_simple.sh to run cross validation on a single forum topic. There are 5 train/test splits and the code learns weights using the stance and disagreement labels in train and evaluates the inferred values for targets in the test directory. When complete, the output should show:
 
 `[main] WARN  edu.ucsc.cs.JointStanceDisagreementPrediction  - Accuracy: 0.7203389830508474`
+
 `[main] WARN  edu.ucsc.cs.JointStanceDisagreementPrediction  - Accuracy: 0.6233766233766234`
+
 `[main] WARN  edu.ucsc.cs.JointStanceDisagreementPrediction  - Accuracy: 0.676056338028169`
+
 `[main] WARN  edu.ucsc.cs.JointStanceDisagreementPrediction  - Accuracy: 0.6466165413533834`
+
 `[main] WARN  edu.ucsc.cs.JointStanceDisagreementPrediction  - Accuracy: 0.6509433962264151`
 
 This gives us the accuracy of prediction on the test set for each random split. You can experiment by commenting out combinations of rules and evaluating the accuracy.
