add figure to stance article

--- a/_posts/2018-07-31-stance.md
+++ b/_posts/2018-07-31-stance.md
@@ -8,6 +8,8 @@ tags: [application]
 
 This tutorial accompanies the PSL model and corpora described in the ["Joint Models of Disagreement and Stance" ACL paper](https://linqs.soe.ucsc.edu/node/258).
 
+![Figure 1]({{ "/assets/images/stance/fig1.png" | relative_url }}){: .center-image }
+
 In this PSL inference task, we'll work with text from online debate forums.
 An online debate forum, e.g. [createdebate.org](createdebate.org), features debates on several socio-political issues, or topics.
 For example, one topic might be whether or not the government should increase spending, which we'll succinctly call "spending."
