Added initial content for changelog.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -64,39 +64,62 @@ while the `develop` branch stays up-to-date with our development work.
 ## PSL Interfaces
 
 ### New Python Interface
+[*commit*](https://github.com/linqs/psl/commit/a38cffe5866f070f7db9665b5fa94f4f9d957a44)
 Added python interface
-Invoke CLI through python package [a38cffe5866f070f7db9665b5fa94f4f9d957a44]
+The PSL CLI can now be invoked using Python! The package is available on `pip` as `pslpython` and can be installed via `pip install pslpython`. For examples of using the python interface, refer to the [psl-examples repository](https://github.com/linqs/psl-examples/tree/develop).
 
 ### New Java Interface
-Pure Java interface [7e305dfea1a0e092b43ece80f4e44f71777ee330]
-
+[*commit*](https://github.com/linqs/psl/commit/7e305dfea1a0e092b43ece80f4e44f71777ee330)
+Pure Java interface  
 ### Groovy Interface Deprecated
-Deprecate Groovy in favor of Java. [476dfd1e745919dc5a2cef4ac521806eb252cac1]
+[*commit*](https://github.com/linqs/psl/commit/476dfd1e745919dc5a2cef4ac521806eb252cac1)
+Deprecate Groovy in favor of Java.
 
 
 ## CLI Improvements
 
 ### Functional Predicates
-Functional Predicates in the CLI [ac2f9a30d42951a4c0c9a90ade1edfdce0e2fe5d]
+[*commit*](https://github.com/linqs/psl/commit/ac2f9a30d42951a4c0c9a90ade1edfdce0e2fe5d)
+Functional Predicates in the CLI are now supported. To use these, a function key needs to be specified in the predicate definition. e.g:
+```predicates:
+  Knows/2: open
+  Likes/2: closed
+  Lived/2: closed
+  SimName:
+    - function: org.linqs.psl.cli.SimpleAcquaintancesTest$SimNameExternalFunction
+
+observations:
+  SimName : knows_obs.txt
+  Knows : knows_obs.txt
+  Lived : lived_obs.txt
+  Likes : likes_obs.txt
+```
+In this case, the functional predicate is `SimName` and it is specified by the `SimNameExternalFunction`. This can then be used in a rule like - `1: SimName(P1, P2) & Lived(P1, L) & Lived(P2, L) & (P1 != P2) -> Knows(P1, P2) ^2`.
 
 ### Multiple Evaluators
-Added ability to specify multiple evaluators in CLI [d63a8f7ee1c9bfb881bb53770e3e84db34c2668b]
+[*commit*](https://github.com/linqs/psl/commit/d63a8f7ee1c9bfb881bb53770e3e84db34c2668b)
+Added ability to specify multiple evaluators in CLI. This can be done by passing in multiple evaluators separated by spaces. eg: `./run.sh --eval CategoricalEvaluator ContinuousEvaluator`.
 
 ### Output Ground Rules
-Added a new option to CLI (-gr/--groundrules) that will output the ground rules to the specified file (stdout if no path specified) [62fbd2cc20c8360c365a02be2cdc4f871a4f5798]
-Added the ability to output ground rules along with their satisfaction in the CLI. (Use --satisfaction flag) [b901e937ed2869b5dcc184585ea29c5fa77b1170]
+[*commit*](https://github.com/linqs/psl/commit/62fbd2cc20c8360c365a02be2cdc4f871a4f5798) | [*commit*](https://github.com/linqs/psl/commit/b901e937ed2869b5dcc184585ea29c5fa77b1170)
+Added a new option to CLI (-gr/--groundrules) that will output the ground rules to the specified file (stdout if no path specified). e.g: `./run.sh --groundrules ground.txt`.
+Added the ability to output ground rules along with their satisfaction either to the specified file or stdout (Use --satisfaction flag). e.g: `./run.sh --satisfaction satisfaction.txt`.
 
 ### Skip Database Commit
-Added option to skip committing atoms to database after inference (--skipCommitAtoms) [3ced4b20be80fc17403663fe16e194bcfcaf6a3a]
+[*commit*](https://github.com/linqs/psl/commit/3ced4b20be80fc17403663fe16e194bcfcaf6a3a)
+Added option to skip committing atoms to database after inference (--skipCommitAtoms):
+Atoms get committed to the database after inference by default. We now provide an option to skip the commits which means that the inferred atoms will no longer be persisted in the database. 
 
 ### Simple Class Names
-Allow simple names for classes [00b603211d070729bc486c558846c3cfebcc4bb7]
+[*commit*](https://github.com/linqs/psl/commit/00b603211d070729bc486c558846c3cfebcc4bb7)
+Allow simple names for classes 
 
 ### Remove Extra Quoting
-Removed extra quoting from CLI output. [cbe7fd8a3c8e5dc9a296836f5574e98353328323]
+[*commit*](https://github.com/linqs/psl/commit/cbe7fd8a3c8e5dc9a296836f5574e98353328323)
+Removed extra quoting from CLI output. 
 
 ### run.sh Takes Arguments
-run.sh in CLI psl-examples not takes blind arguments.
+run.sh in CLI psl-examples now takes blind arguments.
 
 
 ## Performance
@@ -105,16 +128,20 @@ run.sh in CLI psl-examples not takes blind arguments.
 Alocations
 
 ### Smaller Types
-Shorter types (short/float) [9a34ce235b65cd549c28b9b64cbc94a496d1350c]
+[*commit*](https://github.com/linqs/psl/commit/9a34ce235b65cd549c28b9b64cbc94a496d1350c)
+Shorter types (short/float) 
 
 ### Matrix Operations
-Added a class to handle low level matrix operations. [8f034fa8315d3f6461cd38435612d889c745f4a2]
+[*commit*](https://github.com/linqs/psl/commit/8f034fa8315d3f6461cd38435612d889c745f4a2)
+Added a class to handle low level matrix operations. 
 
 ### Streaming Grounding Results
-Streaming grounding results from the database to grounding. [8f4de8464b79ace097ad577dff0bcbfa63369b3e]
+[*commit*](https://github.com/linqs/psl/commit/8f4de8464b79ace097ad577dff0bcbfa63369b3e)
+Streaming grounding results from the database to grounding. 
 
 ### Runtime Statistics
-Added RuntimeStats [df58a390181a1f32ef536674e56e92d20d2257e0]
+[*commit*](https://github.com/linqs/psl/commit/df58a390181a1f32ef536674e56e92d20d2257e0)
+Added RuntimeStats 
 
 
 ## Miscellanea
@@ -123,7 +150,9 @@ Added RuntimeStats [df58a390181a1f32ef536674e56e92d20d2257e0]
 Added GPP weight learning algorithm to PSL
 
 ### Made Data Loading Errors More Clear
-Data loading errors [1e889f49d23ebc438e581fec8a092e50526d9550]
+[*commit*](https://github.com/linqs/psl/commit/1e889f49d23ebc438e581fec8a092e50526d9550)
+Data loading errors 
 
 ### Removed Date ConstantType
-Removed Date ConstantType [df5e1b641d5274dd590bc2a917259a9e38bed464]
+[*commit*](https://github.com/linqs/psl/commit/df5e1b641d5274dd590bc2a917259a9e38bed464)
+Removed Date ConstantType 
