Working on the 2.2.0 changelog.

--- a/_posts/2019-11-03-psl-2.2.0-release.md
+++ b/_posts/2019-11-03-psl-2.2.0-release.md
@@ -81,13 +81,69 @@ Along with pull requests, issues have been moved to the canonical PSL repository
 All old issues have been migrated to this repository.
 
 ## PSL Interfaces
+The PSL 2.2.0 release comes with two new interfaces, and deprecates one.
 
 ### New Python Interface
 [*a38cffe5*](https://github.com/linqs/psl/commit/a38cffe5866f070f7db9665b5fa94f4f9d957a44)
-Added python interface
-The PSL CLI can now be invoked using Python!
-The package is available on `pip` as `pslpython` and can be installed via `pip install pslpython`.
-For examples of using the python interface, refer to the [psl-examples repository](https://github.com/linqs/psl-examples/tree/develop).
+
+PSL 2.2.0 comes with the first official release of the PSL Python interface.
+This package is called `pslpython` and is [available on PyPi](https://pypi.org/project/pslpython).
+Therefore is can be installed via pip:
+```
+pip install pslpython
+```
+The source of the interface is available in the [main PSL repository](https://github.com/linqs/psl/tree/master/psl-python).
+
+Fully implemented examples can be found in the [psl-examples repository](https://github.com/linqs/psl-examples).
+Below is a simplified example of the Python interface:
+```python
+import os
+
+from pslpython.model import Model
+from pslpython.partition import Partition
+from pslpython.predicate import Predicate
+from pslpython.rule import Rule
+
+model = Model('sample-model')
+
+# Add Predicates
+predicate = Predicate('Foo', closed = True, size = 2)
+model.add_predicate(predicate)
+
+predicate = Predicate('Bar', closed = False, size = 2)
+model.add_predicate(predicate)
+
+# Add Rules
+model.add_rule(Rule('0.20: Foo(A, B) -> Bar(A, B) ^2'))
+model.add_rule(Rule('0.01: !Bar(A, B) ^2'))
+
+# Load data.
+path = os.path.join('data', 'foo_obs.txt')
+model.get_predicate('Foo').add_data_file(Partition.OBSERVATIONS, path)
+
+path = os.path.join('data', 'bar_targets.txt')
+model.get_predicate('Bar').add_data_file(Partition.TARGETS, path)
+
+# Inference
+results = model.infer()
+
+# Write out results.
+out_dir = 'inferred-predicates'
+os.makedirs(out_dir, exist_ok = True)
+
+out_path = os.path.join(out_dir, "bar.txt")
+results[model.get_predicate('Bar')].to_csv(out_path, sep = "\t", header = False, index = False)
+```
+
+In addition to creating models in Python, you can use the PSL python package to invoke the PSL CLI interface directory.
+Instead of invoking the PSL jar:
+```sh
+java -jar psl.jar --model test.psl --data test.data
+```
+You can use the `pslpython` package already installed via pip:
+```sh
+python -m pslpython.cli --model test.psl --data test.data
+```
 
 ### New Java Interface
 [*7e305dfe*](https://github.com/linqs/psl/commit/7e305dfea1a0e092b43ece80f4e44f71777ee330)
